Implement logic for the game

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 </head>
 <body>
     <p>Rock Paper Scissors</p>
-    <button class="rock-btn">Rock</button>
+    <button class="js-rock-btn rock-btn">Rock</button>
 
-    <button class="paper-btn">Paper</button>
+    <button class="js-paper-btn paper-btn">Paper</button>
     
-    <button class="scissors-btn">Scissors</button>
+    <button class="js-scissors-btn scissors-btn">Scissors</button>
 
-    <p class="display-score"></p>
+    <p class="js-display-score display-score"></p>
 
-    <button class="reset-btn">Reset Score</button>
+    <button class="js-reset-btn reset-btn">Reset Score</button>
 
     <script src="script.js"></script>
 </body>
